# TS-Codex-OS

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
artifacts/: next_actions.md  project_graph.json  release_receipt.json  ts_status.md
docs/: GITHUB_METADATA.md  architecture.md  codex_workflow.md  receipts.md  ts_loop.md
examples/: sample_project_graph.json  ts_reasoner_status_input.json
prompts/: CODEX_SYSTEM_PROMPT.md  RELEASE_CHECKLIST.md  TASK_TEMPLATE.md  TS_PROJECT_RULES.md
scripts/: demo_ts_codex_os.py  ingest_project.py
tests/: __init__.py  test_graph.py  test_memory.py  test_planner.py  test_tension.py
ts_codex_os/: __init__.py  cli.py  graph.py  ingest.py  memory.py  planner.py  receipts.py  tension.py  types.py  verifier.py
