[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-codex-os"
version = "0.1.0"
description = "Local-first project graph, tension ledger, planner, memory, and receipt substrate for Codex workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BoggersTheFish" }
]
keywords = [
  "thinking-system",
  "codex",
  "project-graph",
  "tension",
  "release-receipts"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://www.boggersthefish.com/"
Repository = "https://github.com/BoggersTheFish/TS-Codex-OS"

[project.scripts]
ts-codex-os = "ts_codex_os.cli:main"

[tool.setuptools.packages.find]
include = ["ts_codex_os*"]

